Use .thin-border on toasts

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,4 +1,4 @@
-<div class="toast rounded-0 border border-dark border-2 mx-auto mb-2 p-2" data-autohide="false">
+<div class="toast thin-border mx-auto mb-2 p-2" data-autohide="false">
     <div class="toast-header text-dark thin-border">
         <strong>Success!</strong>
         <button type="button" class="close ms-auto" data-bs-dismiss="toast" aria-label="Close">
