--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,4 +1,4 @@
-<div class="toast rounded-0 border border-dark border-2 mx-auto mb-2 p-1" data-autohide="false">
+<div class="toast thin-border mx-auto mb-2 p-1" data-autohide="false">
     <div class="toast-header">
         <strong>Alert!</strong>
         <button type="button" class="close ms-auto" data-bs-dismiss="toast" aria-label="Close">
