Correct spelling errors

--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -31,7 +31,7 @@ opera">
 
 <div class="container">
     <h1>Events</h1>
-    <p>We are also availible to provide catering for private and public events.
+    <p>We are also available to provide catering for private and public events.
         Some previous events are shown below.
     </p>
 </div>
