--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -45,13 +45,13 @@ Double Cheese, Super Special, Hamburger">
     {% if current_categories|length == 0 %}
          <h2 id="chicken">Chicken</h2>
          <p>We only use free range organic chicken sourced from local family run farms. These happy
-            chickens not only taste better but are free from any artifical additives.</p>
+            chickens not only taste better but are free from any artificial additives.</p>
     {% endif %}
     {% for category in current_categories %}
     {% if category|lower == 'chicken' %}
     <h2 id="chicken">Chicken</h2>
     <p>We only use free range organic chicken sourced from local family run farms. These happy
-        chickens not only taste better but are free from any artifical additives.</p>
+        chickens not only taste better but are free from any artificial additives.</p>
      {% endif %}
      {% endfor %}
     <div class="row">
@@ -65,7 +65,7 @@ Double Cheese, Super Special, Hamburger">
     {% if current_categories|length == 0 %}
     <h2 id="burgers">Burgers</h2>
     <p>100% British grass-fed free range beef. Our award winning cows are slowly reared until
-        they naturally reach maturity and develop an incredibally rounded flavour.</p>
+        they naturally reach maturity and develop an incredibly rounded flavour.</p>
     {% endif %}
     {% for category in current_categories %}
     {% if category|lower == 'burger' %}
