Update burger intro text

--- a/products/templates/products/all.html
+++ b/products/templates/products/all.html
@@ -70,7 +70,8 @@ Double Cheese, Super Special, Hamburger">
     {% for category in current_categories %}
     {% if category|lower == 'burger' %}
     <h2 id="burgers">Burgers</h2>
-    <p>BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO BURGERS INFO</p>
+    <p>100% British grass-fed free range beef. Our award winning cows are slowly reared until
+        they naturally reach maturity and develop an incredibly rounded flavour.</p>
     {% endif %}
     {% endfor %}
     
