Change toast_success btn text

--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -31,7 +31,7 @@
                 </p>
             </strong>
             <a href="{% url 'view_cart' %}" class="btn btn-primary btn-block">
-                <span class="text-uppercase">Go To Secure Checkout</span>
+                <span class="text-uppercase">Go To Cart</span>
                 <i class="fas fa-lock"></i>
             </a>
         </div>
