--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -32,7 +32,7 @@
             </strong>
             <a href="{% url 'view_cart' %}" class="btn btn-primary btn-block">
                 <span class="text-uppercase">Go To Cart</span>
-                <i class="fas fa-lock"></i>
+                <i class="fa-solid fa-basket-shopping"></i>
             </a>
         </div>
     </div>
