Add .thin-border to toast_error template

--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,5 +1,5 @@
-<div class="toast thin-border mx-auto mb-2 p-1" data-autohide="false">
-    <div class="toast-header">
+<div class="toast mx-auto mb-2 p-1" data-autohide="false">
+    <div class="toast-header thin-border">
         <strong>Error!</strong>
         <button type="button" class="close ms-auto" data-bs-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
