Change all refferences of sign up to signup

--- a/templates/allauth/base.html
+++ b/templates/allauth/base.html
@@ -26,8 +26,8 @@
         <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
         <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
         {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
+        <li><a href="{% url 'account_login' %}">Login</a></li>
+        <li><a href="{% url 'account_signup' %}">Signup</a></li>
         {% endif %}
       </ul>
     </div>
