--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -4,18 +4,18 @@
 <!-- {% load account socialaccount %} -->
 {% load account socialaccount %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block head_title %}{% trans "Login" %}{% endblock %}
 
 {% block inner_content %}
 
-  <h1>{% trans "Sign In" %}</h1>
+  <h1>{% trans "Signup" %}</h1>
 
   {% get_providers as socialaccount_providers %}
 
   {% if socialaccount_providers %}
-  <p>{% blocktrans with site.name as site_name %}Please sign in with one
+  <p>{% blocktrans with site.name as site_name %}Please login with one
     of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-    for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+    for a {{ site_name }} account and login below:{% endblocktrans %}</p>
 
   <div class="socialaccount_ballot">
     <div class="login-or">{% trans 'or' %}</div>
@@ -42,7 +42,7 @@
     <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
     <a class="btn btn-primary" href="{% url 'home' %}">Home</a>
-    <button class="btn btn-cta" type="submit">{% trans "Sign In" %}</button>
+    <button class="btn btn-cta" type="submit">{% trans "Login" %}</button>
     <p class="mt-2">
       <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
     </p>
