Chage references to signup to sign up

--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -101,7 +101,7 @@
                             {% else %}
                             {% endif %}
                             <a href="{% url 'account_login' %}">Login</a>
-                            or <a href="{% url 'account_signup' %}">Signup</a> to submit an answer!
+                            or <a href="{% url 'account_signup' %}">Sign Up</a> to submit an answer!
                         </p>
                     {% endif %}
                     {% for answer in question.question_answer.all %}
