--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -14,18 +14,18 @@
 
   {% if socialaccount_providers %}
   <p>{% blocktrans with site.name as site_name %}Please login with one
-    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
+    of your existing third party accounts. Or, <a href="{{ signup_url }}">signup</a>
     for a {{ site_name }} account and login below:{% endblocktrans %}</p>
 
-  <div class="socialaccount_ballot">
+  <!-- <div class="socialaccount_ballot">
     <div class="login-or">{% trans 'or' %}</div>
-  </div>
+  </div> -->
 
   {% include "socialaccount/snippets/login_extra.html" %}
 
   {% else %}
   <p>{% blocktrans %}If you have not created an account yet, then please
-    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+    <a href="{{ signup_url }}">signup</a> first.{% endblocktrans %}</p>
   {% endif %}
 
   <button class="btn btn-primary mb-3">
