--- a/templates/allauth/account/signup_closed.html
+++ b/templates/allauth/account/signup_closed.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Signup Closed" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Signup Closed" %}</h1>
+<h1>{% trans "Sign Up Closed" %}</h1>
 
-<p>{% trans "We are sorry, but the signup is currently closed." %}</p>
+<p>{% trans "We are sorry, but the Sign Up is currently closed." %}</p>
 {% endblock %}
