--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -10,7 +10,8 @@
 <div class="col mx-auto thick-border p-4">
     <h1>{% trans "Verify Your E-mail Address" %}</h1>
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the Sign Up
+        process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 </div>
 </div>
 
