--- a/templates/allauth/socialaccount/signup.html
+++ b/templates/allauth/socialaccount/signup.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="container thick-border">
-    <h1>{% trans "Signup" %}</h1>
+    <h1>{% trans "Sign Up" %}</h1>
 
     <p>{% blocktrans with provider_name=account.get_provider.name site_name=site.name %}You are about to use your {{provider_name}} account to login to
     {{site_name}}. As a final step, please complete the following form:{% endblocktrans %}</p>
@@ -17,7 +17,7 @@
       {% if redirect_field_value %}
       <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
       {% endif %}
-      <button type="submit">{% trans "Signup" %} &raquo;</button>
+      <button type="submit">{% trans "Sign Up" %} &raquo;</button>
   </form>
 
 </div> 
