--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -45,7 +45,7 @@
                  {% with url_name=request.resolver_match.url_name %}
                  <li class="nav-item order-lg-1 ms-lg-auto">
                      <a class="nav-link {% if url_name == 'account_signup' %}active{% endif %}"
-                         href="{% url 'account_signup' %}">Signup</a>
+                         href="{% url 'account_signup' %}">Sign Up</a>
                  </li>
                  
                  <li class="nav-item order-lg-2">
