--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -32,7 +32,7 @@ vegetarian, veg, food for events, best in Sheffield">
 </section>
 
 <section class="container thick-border sm-no-border mt-xl-5">
-    <h2 class="text-center">Our Story</h2>
+    <h2 class="text-center my-2">Our Story</h2>
     <p>Get Wurst serves delicious, fresh and authentic Berlin sourced Bratwursts, Chicken and Burgers! Based at the
         top of Fargate, Sheffield all our products are multi-award winning and cooked to order. Use this site to view our menu and order food
         for collection. We can also be booked for private and public events.
