--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -2,23 +2,23 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block head_title %}{% trans "Sign Up" %}{% endblock %}
 
 {% block inner_content %}
 <div class="container ">
 
 <h1>{% trans "Sign Up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">login</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">Login</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
   {{ form|crispy }}
-  {{ form.as_p }}
+  <!-- {{ form.as_p }} -->
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button type="submit" class="btn btn-primary mb-3">{% trans "Signup" %}</button>
+  <button type="submit" class="btn btn-primary mb-3">{% trans "Sign Up" %}</button>
 </form>
 
 </div>
