Add else block to .accordion-body in faq template

--- a/templates/allauth/base.html
+++ b/templates/allauth/base.html
@@ -27,7 +27,7 @@
         <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
         {% else %}
         <li><a href="{% url 'account_login' %}">Login</a></li>
-        <li><a href="{% url 'account_signup' %}">Signup</a></li>
+        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
         {% endif %}
       </ul>
     </div>
