--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -126,8 +126,10 @@
                                     <h3>Feel free to submit another answer below!</h3>
                                 {% endif %}
                             {% endif %}
-                            <!-- <a href="{% url 'account_login' %}">Login</a>
-                            or <a href="{% url 'account_signup' %}">Sign Up</a> to submit an answer! -->
+                            <p>
+                                <a href="{% url 'account_login' %}">Login</a>
+                                or <a href="{% url 'account_signup' %}">Sign Up</a> to submit an answer!
+                            </p>
                          {% if not forloop.last %}
                          <hr>
                          {% endif %}
