Update index meta description

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -3,12 +3,9 @@
 
 {% block extra_meta %}
 <meta name="description" content="Serving East Midlands best Bratwurst, Chicken and Burgers. Authentic quality German street food and new freshly homemade
-Burgers to takeaway. Order online until late at night with vegan (seitan), vegetarian, pork, beef and chicken options.
-Real Bratwursts (like a super sausage hotdog) a choice of chicken wings, breast, legs and thigh fried chicken pieces. 
-The tastiest, most delicious fast food in the UK. Healthy options available. Currently based in Sheffield city centre.">
+Burgers to takeaway. Order online until late at night.">
 <meta name="keywords" content="Bratwurst, brat, bratty, wurst, bockwurst german food, sausage, hotdog, burger, beef,fried chicken, 
-wings, thigh, legs, breast, takeaway, order online, fast food, late night food, vegan,
-vegetarian, veg, food for events, best in Sheffield">
+wings, thigh, legs, breast, takeaway, order online, fast food, late night food, food for events">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="canonical" href="https://ecomm-gw.herokuapp.com">
 <meta name="robots" content="index, follow">
