Update user story table in readme

--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -73,7 +73,7 @@
 <div class="container mb-3">
     <h1>We hear you may have a question for Get Wurst?</h1>
     {% if user.is_authenticated %}
-    <a href="#ask-question" class="btn btn-primary my-3">Ask Question</a>
+    <a href="#ask-question" class="btn btn-primary my-3">To Ask Question</a>
     {% else %}
     <p>Please login to submit questions and answers or to like answers.</p>
     {% endif %}
