--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
 
-  <h1>{% trans "Sign Up" %}</h1>
+  <h1>{% trans "Login" %}</h1>
 
   {% get_providers as socialaccount_providers %}
 
