Change delivery legend on checkout template to card details

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -64,7 +64,8 @@
                 </fieldset>
                 <fieldset class="px-3 mb-5">
                     <legend class="fieldset-label small px-2 w-auto">
-                        Delivery</legend>
+                        Card Details
+                    </legend>
                     {{ order_form.phone_number | as_crispy_field }}
                     {{ order_form.street_address1 | as_crispy_field }}
                     {{ order_form.street_address2 | as_crispy_field }}
