--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -110,6 +110,7 @@
                         class="btn btn-primary">
                             <i class="fas fa-chevron-left"></i>
                         Adjust Cart
+                            <i class="fa-solid fa-basket-shopping"></i>
                     </a>
                     <button id="submit-button" class="btn btn-cta">
                         Complete Order
@@ -121,7 +122,6 @@
 
                        Your card will be charged 
                             <strong>£{{ total|floatformat:2 }}</strong>
-
                     </p>
                 </div>
             </form>
