Update back to home page button icon in checkout_success template

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -95,10 +95,10 @@
             </a>
             {% else %}
             <a href="{% url 'home' %}" class="btn btn-primary my-2">
-                <span class="icon mr-2">
-                    <i class="fas fa-gifts"></i>
+                <span class="text-uppercase">
+                    <i class="fas fa-chevron-left"></i>
+                    Back to home page
                 </span>
-                <span class="text-uppercase">Back to home page</span>
             </a>
             {% endif %}
         </div>
