--- a/faq/templates/faq/faq.html
+++ b/faq/templates/faq/faq.html
@@ -126,12 +126,13 @@
                                     <h3>Feel free to submit another answer below!</h3>
                                 {% endif %}
                             {% else %}
+                            <span class="d-inline-block mb-3">Liked by {{ answer.like.all.count }}
+                                user{{ answer.like.all.count|pluralize }}</span>
                             <p>
                                 <a href="{% url 'account_login' %}">Login</a>
                                 or <a href="{% url 'account_signup' %}">Sign Up</a> to submit another answer!
                             </p>
                             {% endif %}
-                            
                          {% if not forloop.last %}
                          <hr>
                          {% endif %}
