Change Logout link in main-nav to sign out

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -36,7 +36,7 @@
                  
                  <li class="nav-item order-lg-1 ms-lg-auto">
                      <a class="nav-link {% if url_name == 'account_logout' %}active{% endif %}"
-                         href="{% url 'account_logout' %}">Logout</a>
+                         href="{% url 'account_logout' %}">Sign Out</a>
                  </li>
                  {% endwith %}
 
