--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -6,11 +6,13 @@
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
 
 {% block content %}
+<div class="col-lg-6 thick-border m-5 mx-lg-auto p-5">
     <h1>{% trans "Password Reset" %}</h1>
     
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
-    
+
     <p>{% blocktrans %}We have sent you an e-mail. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+</div>
 {% endblock %}
