Add border to templates/allauth/account/password_change, /password_reset_form_key and /password_reset+form_key_done

--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -4,6 +4,8 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+<div class="col-lg-6 thick-border m-5 mx-lg-auto p-5">
     <h1>{% trans "Change Password" %}</h1>
     <p>{% trans 'Your password is now changed.' %}</p>
+</div>
 {% endblock %}
