--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -5,6 +5,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
+<div class="col-lg-6 thick-border m-5 mx-lg-auto p-5">
     <h1>{% trans "Change Password" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
@@ -12,4 +13,5 @@
         {{ form.as_p }}
         <button type="submit" name="action">{% trans "Change Password" %}</button>
     </form>
+</div>
 {% endblock %}
