--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -75,7 +75,7 @@
                     <div class="form-check form-check-inline mr-0"> 
                         {% if user.is_authenticated %} 
                             <label class="form-check-label" for="id-save-info">
-                                Save this delivery information to my profile
+                                Save this information to my profile
                             </label>
                         <input class="form-check-input" 
                             type="checkbox" id="id-save-info" name="save-info"
