--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -10,17 +10,17 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h2 class="mb-4">Thank You</h2>
+            <h1 class="mb-4">Thank You</h1>
             <p class="text-black">Your order information is below. A confirmation email will be sent to
                 <strong>{{ order.email }}</strong>.</p>
         </div>
     </div>
-    <div class="row">
+    <div class="row container">
         <div class="col-12 col-lg-7"></div>
         <div class="p-2 thick-border">
             <div class="row">
                 <div class="col">
-                    <small class="text-muted">Order Info:</small>
+                    <h2 class="text-muted">Order Info:</h2>
                 </div>
             </div>
             <div class="row">
@@ -39,22 +39,25 @@
                     <p class="mb-0">{{ order.date }}</p>
                 </div>
             </div>
+            <hr>
             <div class="row">
                 <div class="col">
-                    <small class="text-muted">Order Details:</small>
+                    <h2 class="text-muted">Order Details:</h2>
                 </div>
             </div>
             {% for item in order.lineitems.all %}
             <div class="row">
                 <div class="col-12 col-md-4">
-                    <p class="small mb-0 text-black font-weight-bold">
+                    <p class="mb-0 font-weight-bold">
                         {{ item.product.name }}
                     </p>
                 </div>
                 <div class="col-12 col-md-8 text-md-right">
-                    <p class="small mb-0">{{ item.quantity }} @ £{{ item.product.price }} each</p>
+                    <p class="mb-0">{{ item.quantity }} @ £{{ item.product.price }} each</p>
+                    
                 </div>
             </div>
+            <hr>
             {% endfor %}
             <div class="row">
                 <div class="col-12 col-md-4">
