Change heights of menu/edit textareas

--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -14,7 +14,7 @@
 {% endif %}<br>
 {{ widget.input_text }}
 {% endif %}
-<span class="btn thin-border w-100 text-start">
+<span class="btn thin-border w-100 text-start" id="select-img-field">
     Select Image <input type="{{ widget.type }}" class="ms-0" 
         name="{{ widget.name }}"
         {% include "django/forms/widgets/attrs.html" %}>
