--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -61,6 +61,8 @@
                     w-auto">Details</legend>
                     {{ order_form.full_name | as_crispy_field }}
                     {{ order_form.email | as_crispy_field }}
+                    <input class="form-check-input" type="checkbox" id="id-save-info" name="save-info" checked>
+                    Tick to recieve newsletter emails
                 </fieldset>
                 <fieldset class="px-3 mb-5">
                     <legend class="fieldset-label small px-2 w-auto">
