--- a/products/templates/products/edit.html
+++ b/products/templates/products/edit.html
@@ -16,9 +16,9 @@
                 enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
-                <!-- {% if field.name != 'image' %} -->
+                {% if field.name != 'image' %}
                 {{ field | as_crispy_field }}
-                <!-- {% else %} -->
+                {% else %}
                 {{ field }}
                 {% endif %}
                 {% endfor %}
