Add load static to main-nav

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@ wings, thigh, legs, breast, takeaway, order online, fast food, late night food, 
             </div>
         </div>
         <div class="col-6 overflow-hidden">
-            <img src="{{ STATIC_URL }}/images/hero-img.webp" class="hero-img" alt="A delicous looking double cheese burger">
+            <img src="{{ STATIC_URL }}images/hero-img.webp" class="hero-img" alt="A delicous looking double cheese burger">
         </div>   
     </div> 
 </section>
