--- a/events/templates/events/all.html
+++ b/events/templates/events/all.html
@@ -42,7 +42,7 @@ opera" />
               aria-label="Visit {{ event.name }}'s page (opens in a new tab)">
               <img
                 class="card-img"
-                src="{{ MEDIA_URL }}{{ event.image }}"
+                src="{{ event.image.url }}"
                 alt="{{ event.name }} on {{ event.date|date:'M o' }}" />
               <h2 class="card-title">{{ event.name }}</h2>
             </a>
